Day10-AWS_ASG_LB/vpc.tf
resource "aws_vpc" "terraform-vpc" {
  tags = {
    Name = "terraform-vpc"
  }
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
}
