Day10-AWS_ASG_LB/security_group.tf
resource "aws_security_group" "terraform-sg" {
  name = "terraform-sg-1"
  description = "security group created through teraform"
  vpc_id = aws_vpc.terraform-vpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
